Add redirectUrl table to return/success page